fixed a few details; gap, width of sections

--- a/contact.css
+++ b/contact.css
@@ -27,7 +27,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 40px;
     margin-top: 20px;
 } 
 
@@ -42,8 +42,10 @@
     min-width: 300px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 50%;
+    width: 100%; 
+    max-width: 800px;
     box-sizing: border-box;
+    background-color: #fff0ce;
 }
 
 #map-container iframe {
@@ -57,10 +59,11 @@
 #map-container h2 {
     font-size: 24px;
     color: #0c356a;
-    background: rgba(255, 240, 206, 0.8); /* Semi-transparent background */
+    background: #0c356a;
+    color: #fff0ce;
     padding: 10px 20px;
     border-radius: 10px;
-    z-index: 1; /* Ensures the text appears above other content if needed */
+    z-index: 1; 
     margin-bottom: 20px;
 }
 
@@ -71,7 +74,8 @@
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 50%;
+    width: 100%;
+    max-width: 800px;
     box-sizing: border-box;
 }
 
